some change needed to be done

--- a/industryinc/acooler.html
+++ b/industryinc/acooler.html
@@ -200,9 +200,11 @@
                 high oil and fuel temperature because of the way they are made.
                 The designs we provide are compact , lightweight, high
                 performance with high cooling under demanding engine conditions
-                <br />> Material: Aluminum <br />> Design Types: Fin & Tube /
-                Bar & Plate <br />> Off-Road / Construction Equipment: Backhoe
-                Loaders, Dumpers, Dozers and Concrete Mixtures etc. <br />>
+                <br />
+                Material: Aluminum <br />
+                Design Types: Fin & Tube / Bar & Plate <br />
+                Off-Road / Construction Equipment: Backhoe Loaders, Dumpers,
+                Dozers and Concrete Mixtures etc. <br />
                 Industrial Power Generation Engines: 250 KVA - 2000 KVA
               </p>
               <div class="about-sign">
@@ -261,7 +263,7 @@
                 <a href="mailto: info@saaswad.com"
                   ><i class="fa fa-envelope"></i
                 ></a>
-                <a href=""><i class="fa fa-google"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
                 <!-- <a href=""><i class="fa fa-dribbble"></i></a>
                 <a href=""><i class="fa fa-behance"></i></a> -->
               </div>
@@ -298,12 +300,19 @@
             <div class="footer-widget">
               <h2 class="fw-title">Our Facilities</h2>
               <ul>
-                <li>Punching Machine</li>
-                <li>Cnc Tube Bender 65CNC3XES( 3M), Hybrid</li>
-                <li>Bending Machine</li>
-                <li>CNC Vertical Machine Centre ( BMV 80 TC 20)</li>
-                <li>Shearing Machine</li>
-                <li>Oven</li>
+                <li>
+                  <a class="hover1" href="./unit3.html">Varanasi Unit</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./unit4.html">Pune Unit</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./coorporate_office.html"
+                    >Coorporate Ofiice</a
+                  >
+                </li>
+                <!-- <li><a href="">Oil Extractions</a></li>
+                <li><a href="">About our Work</a></li> -->
               </ul>
             </div>
           </div>
@@ -357,7 +366,7 @@
               <ul class="footer-menu">
                 <li>
                   <a class="hover1" href="http://technoborg.in/"
-                    >Team Technoborg</a
+                    >Team Technoborg<sup>&copy;</sup></a
                   >
                 </li>
               </ul>
