--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -246,9 +246,9 @@
                   <!-- </div> -->
                   <h5>Industrial Radiators</h5>
                 </div>
-                <p>
+                <!-- <p>
                   Application-Power Generation
-                </p>
+                </p> -->
               </div>
             </div>
             <div class="col-lg-6 col-md-6 text-center">
@@ -259,9 +259,6 @@
                   <!-- </div> -->
                   <h5>Oil Coolers</h5>
                 </div>
-                <p>
-                  Made in our Unit 2 Pune India
-                </p>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 text-center">
@@ -272,9 +269,6 @@
                   <!-- </div> -->
                   <h5>Heat Exchangers</h5>
                 </div>
-                <p>
-                  Application-Screw Compressor
-                </p>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 text-center">
@@ -285,9 +279,6 @@
                   <!-- </div> -->
                   <h5>Charged Air Coolers</h5>
                 </div>
-                <p>
-                  Made in our Unit 2 Pune India
-                </p>
               </div>
             </div>
             <!-- <div class="col-lg-4 col-md-6">
@@ -354,9 +345,11 @@
               <div class="fb-text">
                 <h5>Indian Railways</h5>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipi-scing elit.
-                  Quisque orci purus, sodales in est quis, blandit sollicitudin
-                  est. Nam ornare ipsum ac accumsan auctor.
+                  Indian Railways is a governmental entity under the Ministry of
+                  Railways which operates India's national railway system. It is
+                  run by the government as a public good and manages the fourth
+                  largest railway network in the world by size, with a route
+                  length of 68,155 km as of March 2019.
                 </p>
                 <!-- <a href="" class="fb-more-btn">Read More</a> -->
               </div>
@@ -368,9 +361,12 @@
               <div class="fb-text">
                 <h5>Cummins India Ltd.</h5>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipi-scing elit.
-                  Quisque orci purus, sodales in est quis, blandit sollicitudin
-                  est. Nam ornare ipsum ac accumsan auctor.
+                  Formed in 1962, the largest entity of Cummins in India,
+                  Cummins India Limited is the country’s leading manufacturer of
+                  diesel and natural gas engines. One of the seven legal
+                  entities of the Cummins Group in India, Cummins India Limited
+                  comprises three business units - Engine, Power Systems, and
+                  Distribution.
                 </p>
                 <!-- <a href="" class="fb-more-btn">Read More</a> -->
               </div>
@@ -379,12 +375,15 @@
           <div class="col-lg-4 col-md-12">
             <div class="feature-box">
               <img src="img/company1.jpg" alt="" />
-              <div class="fb-text">
+              <div class="fb-text" style="padding-bottom: 16px;">
                 <h5>Greaves Cotton Ltd.</h5>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipi-scing elit.
-                  Quisque orci purus, sodales in est quis, blandit sollicitudin
-                  est. Nam ornare ipsum ac accumsan auctor.
+                  Greaves Cotton Limited, a diversified engineering company that
+                  is a leading manufacturer and marketer of diesel engines,
+                  petrol engines, generator sets, pump sets and construction
+                  equipment. With a 160 year old engineering legacy spreading
+                  across India and a growing global presence, we take pride in
+                  our quality products and services.
                 </p>
                 <!-- <a href="" class="fb-more-btn">Read More</a> -->
               </div>
@@ -614,7 +613,7 @@
                 <a href="mailto: info@saaswad.com"
                   ><i class="fa fa-envelope"></i
                 ></a>
-                <a href=""><i class="fa fa-google"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
                 <!-- <a href=""><i class="fa fa-dribbble"></i></a>
                 <a href=""><i class="fa fa-behance"></i></a> -->
               </div>
@@ -651,12 +650,19 @@
             <div class="footer-widget">
               <h2 class="fw-title">Our Facilities</h2>
               <ul>
-                <li>Punching Machine</li>
-                <li>Cnc Tube Bender 65CNC3XES( 3M), Hybrid</li>
-                <li>Bending Machine</li>
-                <li>CNC Vertical Machine Centre ( BMV 80 TC 20)</li>
-                <li>Shearing Machine</li>
-                <li>Oven</li>
+                <li>
+                  <a class="hover1" href="./unit3.html">Varanasi Unit</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./unit4.html">Pune Unit</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./coorporate_office.html"
+                    >Coorporate Ofiice</a
+                  >
+                </li>
+                <!-- <li><a href="">Oil Extractions</a></li>
+                <li><a href="">About our Work</a></li> -->
               </ul>
             </div>
           </div>
@@ -709,9 +715,7 @@
             <div class="col-lg-7 order-1 order-lg-2 p-0">
               <ul class="footer-menu">
                 <li>
-                  <a class="hover1" href="http://technoborg.in/"
-                    >Team Technoborg</a
-                  >
+                  <a class="hover1" href="http://technoborg.in/">Team Technoborg<sup>&copy;</sup></a>
                 </li>
               </ul>
             </div>
@@ -754,18 +758,6 @@
           return false;
         });
       });
-    </script>
-    <script type="text/JavaScript">
-      //Script courtesy of BoogieJack.com
-      var message="NoRightClicking";
-      function defeatIE() {if (document.all) {(message);return false;}}
-      function defeatNS(e) {if
-      (document.layers||(document.getElementById&&!document.all)) {
-      if (e.which==2||e.which==3) {(message);return false;}}}
-      if (document.layers)
-      {document.captureEvents(Event.MOUSEDOWN);document.onmousedown=defeatNS;}
-      else{document.onmouseup=defeatNS;document.oncontextmenu=defeatIE;}
-      document.oncontextmenu=new Function("return false")
     </script>
   </body>
 </html>
