--- a/industryinc/mradiator.html
+++ b/industryinc/mradiator.html
@@ -205,10 +205,12 @@
                 cooling systems include all components, as listed below, needed
                 to install and connect the heat exchanger to respective engines
                 Drive kit with premium belts, pulleys, and stub shaft<br />
-                > Pipe kit with custom-formed pipes to interface with engine
-                specifications <br />> Radiator base designed to interface with
-                specific engine rail <br />> Optional galvanized steel and heat
-                exchanger coatings for enhanced corrosion protection
+                Pipe kit with custom-formed pipes to interface with engine
+                specifications <br />
+                Radiator base designed to interface with specific engine rail
+                <br />
+                Optional galvanized steel and heat exchanger coatings for
+                enhanced corrosion protection
               </p>
               <div class="about-sign">
                 <!-- <div class="sign">
@@ -266,7 +268,7 @@
                 <a href="mailto: info@saaswad.com"
                   ><i class="fa fa-envelope"></i
                 ></a>
-                <a href=""><i class="fa fa-google"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
                 <!-- <a href=""><i class="fa fa-dribbble"></i></a>
                 <a href=""><i class="fa fa-behance"></i></a> -->
               </div>
@@ -303,12 +305,19 @@
             <div class="footer-widget">
               <h2 class="fw-title">Our Facilities</h2>
               <ul>
-                <li>Punching Machine</li>
-                <li>Cnc Tube Bender 65CNC3XES( 3M), Hybrid</li>
-                <li>Bending Machine</li>
-                <li>CNC Vertical Machine Centre ( BMV 80 TC 20)</li>
-                <li>Shearing Machine</li>
-                <li>Oven</li>
+                <li>
+                  <a class="hover1" href="./unit3.html">Varanasi Unit</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./unit4.html">Pune Unit</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./coorporate_office.html"
+                    >Coorporate Ofiice</a
+                  >
+                </li>
+                <!-- <li><a href="">Oil Extractions</a></li>
+                <li><a href="">About our Work</a></li> -->
               </ul>
             </div>
           </div>
@@ -362,7 +371,7 @@
               <ul class="footer-menu">
                 <li>
                   <a class="hover1" href="http://technoborg.in/"
-                    >Team Technoborg</a
+                    >Team Technoborg<sup>&copy;</sup></a
                   >
                 </li>
               </ul>
