--- a/industryinc/tacooler.html
+++ b/industryinc/tacooler.html
@@ -198,10 +198,12 @@
                 intake of air for increased power, improved fuel economy and
                 emission . The CACS manufactured at SAASWAD with controlled
                 atmosphere brazing processes are available in following
-                categories :- <br />> Material: Aluminum <br />> Design Types:
-                Fin & Tube / Bar & Plate <br />> Off-Road / Construction
-                Equipment Backhoe Loaders, Dumpers, Dozers and Concrete Mixtures
-                etc. Industrial Power Generation Engines: 75 KVA-1010 KVA
+                categories :- <br />
+                Material: Aluminum <br />
+                Design Types: Fin & Tube / Bar & Plate <br />
+                Off-Road / Construction Equipment Backhoe Loaders, Dumpers,
+                Dozers and Concrete Mixtures etc. Industrial Power Generation
+                Engines: 75 KVA-1010 KVA
               </p>
               <div class="about-sign">
                 <!-- <div class="sign">
@@ -259,7 +261,7 @@
                 <a href="mailto: info@saaswad.com"
                   ><i class="fa fa-envelope"></i
                 ></a>
-                <a href=""><i class="fa fa-google"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
                 <!-- <a href=""><i class="fa fa-dribbble"></i></a>
                 <a href=""><i class="fa fa-behance"></i></a> -->
               </div>
@@ -296,12 +298,19 @@
             <div class="footer-widget">
               <h2 class="fw-title">Our Facilities</h2>
               <ul>
-                <li>Punching Machine</li>
-                <li>Cnc Tube Bender 65CNC3XES( 3M), Hybrid</li>
-                <li>Bending Machine</li>
-                <li>CNC Vertical Machine Centre ( BMV 80 TC 20)</li>
-                <li>Shearing Machine</li>
-                <li>Oven</li>
+                <li>
+                  <a class="hover1" href="./unit3.html">Varanasi Unit</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./unit4.html">Pune Unit</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./coorporate_office.html"
+                    >Coorporate Ofiice</a
+                  >
+                </li>
+                <!-- <li><a href="">Oil Extractions</a></li>
+                <li><a href="">About our Work</a></li> -->
               </ul>
             </div>
           </div>
@@ -355,7 +364,7 @@
               <ul class="footer-menu">
                 <li>
                   <a class="hover1" href="http://technoborg.in/"
-                    >Team Technoborg</a
+                    >Team Technoborg<sup>&copy;</sup></a
                   >
                 </li>
               </ul>
