--- a/industryinc/unit4.html
+++ b/industryinc/unit4.html
@@ -136,7 +136,7 @@
         <nav class="site-nav-menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li ><a href="about.html">About us</a></li>
+            <li><a href="about.html">About us</a></li>
             <li>
               <a href="solutions.php">Products</a>
             </li>
@@ -177,12 +177,12 @@
         </div>
       </div>
     </section>
-    <br>
-    <br>
+    <br />
+    <br />
     <h3 style="margin-bottom: 20px;">
       <center>UNIT 4</center>
     </h3>
-    <br>
+    <br />
     <div class="map-section">
       <div class="container">
         <div class="map-info">
@@ -283,7 +283,7 @@
                 <a href="mailto: info@saaswad.com"
                   ><i class="fa fa-envelope"></i
                 ></a>
-                <a href=""><i class="fa fa-google"></i></a>
+                <a href=""><i class="fa fa-linkedin"></i></a>
                 <!-- <a href=""><i class="fa fa-dribbble"></i></a>
                 <a href=""><i class="fa fa-behance"></i></a> -->
               </div>
@@ -320,12 +320,19 @@
             <div class="footer-widget">
               <h2 class="fw-title">Our Facilities</h2>
               <ul>
-                <li>Punching Machine</li>
-                <li>Cnc Tube Bender 65CNC3XES( 3M), Hybrid</li>
-                <li>Bending Machine</li>
-                <li>CNC Vertical Machine Centre ( BMV 80 TC 20)</li>
-                <li>Shearing Machine</li>
-                <li>Oven</li>
+                <li>
+                  <a class="hover1" href="./unit3.html">Varanasi Unit</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./unit4.html">Pune Unit</a>
+                </li>
+                <li>
+                  <a class="hover1" href="./coorporate_office.html"
+                    >Coorporate Ofiice</a
+                  >
+                </li>
+                <!-- <li><a href="">Oil Extractions</a></li>
+                <li><a href="">About our Work</a></li> -->
               </ul>
             </div>
           </div>
@@ -379,7 +386,7 @@
               <ul class="footer-menu">
                 <li>
                   <a class="hover1" href="http://technoborg.in/"
-                    >Team Technoborg</a
+                    >Team Technoborg<sup>&copy;</sup></a
                   >
                 </li>
               </ul>
