--- a/industryinc/coorporate_office.html
+++ b/industryinc/coorporate_office.html
@@ -293,20 +293,20 @@
               <h2 class="fw-title">Our Products</h2>
               <ul>
                 <li>
-                  <a class="hover1" href="./radiator.html"> Radiators</a>
+                  <a class="hover1" href="./radiator.php"> Radiators</a>
                 </li>
                 <li>
-                  <a class="hover1" href="./mradiator.html"
+                  <a class="hover1" href="./mradiator.php"
                     >Mechanically Bonded Radiators</a
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./acooler.html"
+                  <a class="hover1" href="./acooler.php"
                     >Radiator, Oil cooler and AfterCoolers Assembly</a
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./tacooler.html"
+                  <a class="hover1" href="./tacooler.php"
                     >Turbo After Cooler</a
                   >
                 </li>
