--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -624,22 +624,20 @@
               <h2 class="fw-title">Our Products</h2>
               <ul>
                 <li>
-                  <a class="hover1" href="./radiator.html"> Radiators</a>
+                  <a class="hover1" href="./radiator.php"> Radiators</a>
                 </li>
                 <li>
-                  <a class="hover1" href="./mradiator.html"
+                  <a class="hover1" href="./mradiator.php"
                     >Mechanically Bonded Radiators</a
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./acooler.html"
+                  <a class="hover1" href="./acooler.php"
                     >Radiator, Oil cooler and AfterCoolers Assembly</a
                   >
                 </li>
                 <li>
-                  <a class="hover1" href="./tacooler.html"
-                    >Turbo After Cooler</a
-                  >
+                  <a class="hover1" href="./tacooler.php">Turbo After Cooler</a>
                 </li>
                 <!-- <li><a href="">Oil Extractions</a></li>
                 <li><a href="">About our Work</a></li> -->
@@ -715,7 +713,9 @@
             <div class="col-lg-7 order-1 order-lg-2 p-0">
               <ul class="footer-menu">
                 <li>
-                  <a class="hover1" href="http://technoborg.in/">Team Technoborg<sup>&copy;</sup></a>
+                  <a class="hover1" href="http://technoborg.in/"
+                    >Team Technoborg<sup>&copy;</sup></a
+                  >
                 </li>
               </ul>
             </div>
