--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -290,7 +290,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <!-- <img src="img/team/1.jpg" alt="" /> -->
-              <div class="member-info">
+              <div class="member-info" style="padding-bottom: 79px;">
                 <h3 style="font-size: 2rem; margin-bottom: 20px;">
                   <img
                     src="icon-fonts/icons-main/mission.png"
@@ -310,7 +310,7 @@
           <div class="col-md-4">
             <div class="team-member">
               <!-- <img src="img/team/1.jpg" alt="" /> -->
-              <div class="member-info">
+              <div class="member-info" style="padding-bottom: 79px;">
                 <h3 style="font-size: 2rem; margin-bottom: 20px;">
                   <img
                     src="icon-fonts/icons-main/mission (1).png"
